--- a/empowered-vote.html
+++ b/empowered-vote.html
@@ -88,6 +88,75 @@
 				</div>
 			</div>
 			</div>
+			<div class="container-fluid reveal" data-section-id="problemstatement" id="problemstatement"
+			style="font-weight: bold; background-color: #F8F8F8;">
+			<div class="row px-4 mx-4 project-1-para">
+				<div class="col-sm-12 mt-4 hero-text text-center">
+					<span style="font-size: 32px; font-weight: 800; color: #202020;">Project Impact
+						<hr class="mt-2" style="width: 10%; border-top: 4px solid #23606E; border-radius: 20px;">
+					</span>
+				</div>
+			</div>
+			<div class="row px-4 mx-4 project-1-para">
+				<div class="col-sm-4 my-5 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#23606E" class="bi bi-clock-fill" viewBox="0 0 16 16">
+  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71z"/>
+</svg> <br>
+					<span style="font-size: 24px; font-weight: 800; color: #202020;"> 50% Choice Reduction
+						<!-- <hr class="mt-2 ml-0 text-center"
+											style="width: 13%; border-top: 4px solid #23606E; border-radius: 20px;"> -->
+					</span>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						Optimized the survey by reducing 10 inconsistent options to a unified 5-point Likert scale to eliminate decision fatigue.
+					</p>
+					<hr>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						<span style="font-size: 21px; font-weight: 700; color: #202020;">Impact:</span> 
+						Maximised Task Efficiency, aiming to reduce time-to-complete and user drop-off.
+					</p>
+				</div>
+				<div class="col-sm-4 my-5 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#23606E" class="bi bi-lightning-charge-fill" viewBox="0 0 16 16">
+  <path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"/>
+</svg><br>
+					<span style="font-size: 24px; font-weight: 800; color: #202020;"> Real-Time Feedback Loop
+						<!-- <hr class="mt-2 ml-0 text-center"
+											style="width: 13%; border-top: 4px solid #23606E; border-radius: 20px;"> -->
+					</span>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						Replaced the end-of-survey static graph with a dynamic spider-map that updates instantly with every user selection.
+					</p>
+					<hr>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						<span style="font-size: 21px; font-weight: 700; color: #202020;">Impact:</span> 
+						Shifted the UX from a passive survey to an Engagement Loop, driving immediate user "investment" in the data.
+					</p>
+				</div>
+				<div class="col-sm-4 my-5 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#23606E"
+						class="bi bi-shield-fill-check" viewBox="0 0 16 16">
+						<path fill-rule="evenodd"
+							d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.8 11.8 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7 7 0 0 0 1.048-.625 11.8 11.8 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.54 1.54 0 0 0-1.044-1.263 63 63 0 0 0-2.887-.87C9.843.266 8.69 0 8 0m2.146 5.146a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793z" />
+					</svg><br>
+					<span style="font-size: 24px; font-weight: 800; color: #202020;">Zero-Scroll Navigation
+						<!-- <hr class="mt-2 ml-0 text-center"
+											style="width: 13%; border-top: 4px solid #23606E; border-radius: 20px;"> -->
+					</span>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						Repositioned navigation to a fixed footer, removing the friction of hidden, below-the-fold buttons.
+					</p>
+					<hr>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						<span style="font-size: 21px; font-weight: 700; color: #202020;">Impact:</span> 
+						Achieved 100% Discoverability of core actions, resolving a critical accessibility failure found in the UX review.
+					</p>
+				</div>
+				<!-- <div class="col-sm-6 my-5 hero-text text-center">
+									<img src="images/FAQ.png" class="project-image w-50 img-fluid"
+										alt="Responsive image">
+								</div> -->
+			</div>
+		</div>
 			<div class="container-fluid underline reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-2 hero-text text-center">
