--- a/fitshare.html
+++ b/fitshare.html
@@ -80,6 +80,73 @@
 					</div>
 				</div>
 			</div>
+			<div class="container-fluid reveal" data-section-id="problemstatement" id="problemstatement"
+			style="font-weight: bold; background-color: #F8F8F8;">
+			<div class="row px-4 mx-4 project-1-para">
+				<div class="col-sm-12 mt-4 hero-text text-center">
+					<span style="font-size: 32px; font-weight: 800; color: #202020;">Project Impact
+						<hr class="mt-2" style="width: 10%; border-top: 4px solid #29489b; border-radius: 20px;">
+					</span>
+				</div>
+			</div>
+			<div class="row px-4 mx-4 project-1-para">
+				<div class="col-sm-4 my-5 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#29489b" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+</svg> <br>
+					<span style="font-size: 24px; font-weight: 800; color: #202020;"> 80% Task Success Rate
+						<!-- <hr class="mt-2 ml-0 text-center"
+											style="width: 13%; border-top: 4px solid #29489b; border-radius: 20px;"> -->
+					</span>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						4 out of 5 participants successfully completed key tasks such as viewing steps and accessing their dashboard without assistance.
+					</p>
+					<hr>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						<span style="font-size: 21px; font-weight: 700; color: #202020;">Impact:</span> 
+						Confirmed that the navigation and dashboard structure were intuitive, while highlighting areas to improve the visibility of privacy controls.
+					</p>
+				</div>
+				<div class="col-sm-4 my-5 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#29489b" class="bi bi-lock-fill" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M8 0a4 4 0 0 1 4 4v2.05a2.5 2.5 0 0 1 2 2.45v5a2.5 2.5 0 0 1-2.5 2.5h-7A2.5 2.5 0 0 1 2 13.5v-5a2.5 2.5 0 0 1 2-2.45V4a4 4 0 0 1 4-4m0 1a3 3 0 0 0-3 3v2h6V4a3 3 0 0 0-3-3"/>
+</svg><br>
+					<span style="font-size: 24px; font-weight: 800; color: #202020;"> Privacy-Centred Dashboard
+						<!-- <hr class="mt-2 ml-0 text-center"
+											style="width: 13%; border-top: 4px solid #29489b; border-radius: 20px;"> -->
+					</span>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						Separated shared household metrics from personal health data and introduced clear entry points for private information.
+					</p>
+					<hr>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						<span style="font-size: 21px; font-weight: 700; color: #202020;">Impact:</span> 
+						Increased user trust and comfort when interacting with sensitive data in a shared household environment.
+					</p>
+				</div>
+				<div class="col-sm-4 my-5 text-center">
+					<svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="#29489b" class="bi bi-bar-chart-fill" viewBox="0 0 16 16">
+  <path d="M1 11a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1zm5-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1z"/>
+</svg><br>
+					<span style="font-size: 24px; font-weight: 800; color: #202020;">Clearer Data Visualisation
+						<!-- <hr class="mt-2 ml-0 text-center"
+											style="width: 13%; border-top: 4px solid #29489b; border-radius: 20px;"> -->
+					</span>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						Improved comparison graphs using clearer labels, hierarchy, and tooltips based on heuristic evaluation findings.
+					</p>
+					<hr>
+					<p class="text-center" style="font-weight: 400; font-size: 21px; color: #212529;">
+						<span style="font-size: 21px; font-weight: 700; color: #202020;">Impact:</span> 
+						Helped users understand their health metrics more easily and engage more confidently with the platform.
+					</p>
+				</div>
+				<!-- <div class="col-sm-6 my-5 hero-text text-center">
+									<img src="images/FAQ.png" class="project-image w-50 img-fluid"
+										alt="Responsive image">
+								</div> -->
+			</div>
+		</div>
 			<div class="container-fluid underline reveal" style="font-weight: bold;">
 				<div class="row">
 					<div class="col-sm-12 my-5 hero-text text-center">
